--- a/Sixer/Base.lproj/Main.storyboard
+++ b/Sixer/Base.lproj/Main.storyboard
@@ -21,18 +21,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8AI-bh-vHz">
-                                <rect key="frame" x="0.0" y="64" width="600" height="165"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="125"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aBM-OD-Tie">
-                                        <rect key="frame" x="250" y="13" width="100" height="100"/>
-                                        <animations/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="100" id="CZW-0y-cx3"/>
-                                            <constraint firstAttribute="width" constant="100" id="GRT-w5-nqo"/>
-                                        </constraints>
-                                    </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuE-02-RSh">
-                                        <rect key="frame" x="187" y="121" width="227" height="31"/>
+                                        <rect key="frame" x="187" y="89" width="227" height="31"/>
                                         <animations/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="31" id="0KC-GD-7V1"/>
@@ -42,29 +34,50 @@
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ko-Ne-xvn">
-                                        <rect key="frame" x="544" y="8" width="37" height="31"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aBM-OD-Tie">
+                                        <rect key="frame" x="260" y="8" width="80" height="80"/>
                                         <animations/>
-                                        <state key="normal" backgroundImage="Settings"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNT-zT-yUF">
-                                        <rect key="frame" x="0.0" y="8" width="45" height="46"/>
-                                        <animations/>
-                                        <state key="normal" image="User"/>
-                                    </button>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="CZW-0y-cx3"/>
+                                            <constraint firstAttribute="width" constant="80" id="GRT-w5-nqo"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <animations/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="wuE-02-RSh" firstAttribute="top" secondItem="aBM-OD-Tie" secondAttribute="bottom" constant="8" id="01v-Re-kwI"/>
+                                    <constraint firstItem="wuE-02-RSh" firstAttribute="top" secondItem="aBM-OD-Tie" secondAttribute="bottom" constant="1" id="01v-Re-kwI"/>
+                                    <constraint firstAttribute="height" constant="125" id="8bX-Cq-vhs"/>
                                     <constraint firstItem="wuE-02-RSh" firstAttribute="centerX" secondItem="8AI-bh-vHz" secondAttribute="centerX" id="9br-Gu-ImR"/>
                                     <constraint firstItem="aBM-OD-Tie" firstAttribute="centerX" secondItem="8AI-bh-vHz" secondAttribute="centerX" id="CKa-VH-geA"/>
-                                    <constraint firstItem="aBM-OD-Tie" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="top" constant="13" id="YNx-A5-Nwa"/>
-                                    <constraint firstAttribute="bottom" secondItem="wuE-02-RSh" secondAttribute="bottom" constant="13" id="oxi-Xf-qS3"/>
+                                    <constraint firstItem="aBM-OD-Tie" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="top" constant="8" id="YNx-A5-Nwa"/>
+                                    <constraint firstAttribute="bottom" secondItem="wuE-02-RSh" secondAttribute="bottom" constant="5" id="oxi-Xf-qS3"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0SI-ZG-j1y">
+                                <rect key="frame" x="0.0" y="212" width="600" height="339"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProgressCell" id="5m4-Ol-EbK">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5m4-Ol-EbK" id="IJb-DD-kQJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <animations/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9pv-A4-QxB" id="XdK-mh-SGf"/>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="z4V-0m-HzB"/>
+                                </connections>
+                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PBi-ou-o7U">
-                                <rect key="frame" x="0.0" y="229" width="600" height="25"/>
+                                <rect key="frame" x="0.0" y="189" width="600" height="25"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity History" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mh3-yr-YOb">
                                         <rect key="frame" x="232" y="2" width="136" height="21"/>
@@ -87,47 +100,62 @@
                                     <constraint firstItem="mh3-yr-YOb" firstAttribute="top" secondItem="PBi-ou-o7U" secondAttribute="top" constant="2" id="PJY-FR-9uj"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0SI-ZG-j1y">
-                                <rect key="frame" x="0.0" y="253" width="600" height="298"/>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProgressCell" id="5m4-Ol-EbK">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5m4-Ol-EbK" id="IJb-DD-kQJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <animations/>
-                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        </tableViewCellContentView>
-                                        <animations/>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="9pv-A4-QxB" id="XdK-mh-SGf"/>
-                                    <outlet property="delegate" destination="9pv-A4-QxB" id="z4V-0m-HzB"/>
-                                </connections>
-                            </tableView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="0SI-ZG-j1y" secondAttribute="bottom" id="1Im-W9-PY4"/>
                             <constraint firstAttribute="trailing" secondItem="8AI-bh-vHz" secondAttribute="trailing" id="5KE-tn-9d4"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="0SI-ZG-j1y" secondAttribute="bottom" id="7CU-hX-Vd9"/>
+                            <constraint firstItem="PBi-ou-o7U" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="bottom" id="6k9-c3-YNc"/>
+                            <constraint firstItem="0SI-ZG-j1y" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="7oX-Ft-8Ob"/>
+                            <constraint firstItem="8AI-bh-vHz" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="ABh-r9-Zs4"/>
                             <constraint firstItem="8AI-bh-vHz" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="AlB-tV-mgL"/>
+                            <constraint firstItem="0SI-ZG-j1y" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="bottom" constant="23" id="C7f-QA-JZ2"/>
                             <constraint firstItem="PBi-ou-o7U" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="bottom" id="KMU-0A-axm"/>
-                            <constraint firstItem="0SI-ZG-j1y" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="Ov2-ZS-Sm5"/>
                             <constraint firstItem="PBi-ou-o7U" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="bottom" id="T92-pz-rcq"/>
-                            <constraint firstAttribute="trailing" secondItem="0SI-ZG-j1y" secondAttribute="trailing" id="YCo-Bn-DvW"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="PBi-ou-o7U" secondAttribute="bottom" constant="297" id="bjm-kL-dJC"/>
+                            <constraint firstItem="PBi-ou-o7U" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="bottom" id="VnN-yQ-b4Q"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="PBi-ou-o7U" secondAttribute="bottom" constant="337" id="bjm-kL-dJC"/>
+                            <constraint firstItem="8AI-bh-vHz" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="d0I-gt-OOa"/>
                             <constraint firstItem="8AI-bh-vHz" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="qDH-Of-p6B"/>
+                            <constraint firstAttribute="trailing" secondItem="8AI-bh-vHz" secondAttribute="trailing" id="qQH-yv-Sew"/>
+                            <constraint firstItem="8AI-bh-vHz" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="qfO-Yx-5iu"/>
+                            <constraint firstAttribute="trailing" secondItem="0SI-ZG-j1y" secondAttribute="trailing" id="reI-7e-g2u"/>
                             <constraint firstAttribute="trailing" secondItem="PBi-ou-o7U" secondAttribute="trailing" id="rlI-ib-WXt"/>
-                            <constraint firstItem="0SI-ZG-j1y" firstAttribute="top" secondItem="8AI-bh-vHz" secondAttribute="bottom" constant="24" id="vhZ-vY-2GB"/>
+                            <constraint firstItem="0SI-ZG-j1y" firstAttribute="top" secondItem="PBi-ou-o7U" secondAttribute="top" id="sWz-qe-9gV"/>
                             <constraint firstItem="PBi-ou-o7U" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="zzM-FZ-b1O"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="5KE-tn-9d4"/>
+                                <exclude reference="AlB-tV-mgL"/>
+                                <exclude reference="qfO-Yx-5iu"/>
+                                <exclude reference="C7f-QA-JZ2"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="mkn-Sk-NzK"/>
+                    <navigationItem key="navigationItem" id="mkn-Sk-NzK">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="nsq-px-YkB">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="RNT-zT-yUF">
+                                <rect key="frame" x="20" y="-1" width="45" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <animations/>
+                                <state key="normal" image="User"/>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="K2b-Sl-k1w">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6ko-Ne-xvn">
+                                <rect key="frame" x="543" y="6" width="37" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <animations/>
+                                <state key="normal" backgroundImage="Settings"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="0SI-ZG-j1y" id="20a-om-4on"/>
+                        <outlet property="userImageView" destination="aBM-OD-Tie" id="E5v-za-5ud"/>
+                        <outlet property="usernameLabel" destination="wuE-02-RSh" id="Ee7-6n-5D1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
