--- a/Sixer/Base.lproj/Main.storyboard
+++ b/Sixer/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -1671,7 +1671,8 @@
                                         <exclude reference="y8t-fb-Jdx"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="227" width="560" height="88"/>
                                     <mask key="constraints">
                                         <include reference="y8t-fb-Jdx"/>
                                     </mask>
@@ -1697,7 +1698,8 @@
                                         <exclude reference="bu6-lK-MoL"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="114" width="560" height="88"/>
                                     <mask key="constraints">
                                         <include reference="bu6-lK-MoL"/>
                                     </mask>
@@ -1718,6 +1720,9 @@
                                 <state key="normal" title="Quit">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="20" y="476" width="560" height="88"/>
+                                </variation>
                                 <connections>
                                     <segue destination="49e-Tb-3d3" kind="showDetail" identifier="QuitGame" id="fKZ-Df-WOf"/>
                                 </connections>
@@ -1811,6 +1816,9 @@
                                         <animations/>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="223" width="600" height="160"/>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="ZtS-jC-akE" id="Qfk-Ov-lIQ"/>
                                     <outlet property="delegate" destination="ZtS-jC-akE" id="ahd-sz-Jcd"/>
@@ -1828,6 +1836,9 @@
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="129" y="92" width="451" height="30"/>
+                                </variation>
                                 <connections>
                                     <action selector="onNameTextFieldTapped:" destination="ZtS-jC-akE" eventType="editingDidEnd" id="PF3-mr-dF2"/>
                                 </connections>
@@ -1846,7 +1857,8 @@
                                         <exclude reference="e2m-u2-KEX"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="206.5" y="171" width="187" height="21"/>
                                     <mask key="constraints">
                                         <include reference="e2m-u2-KEX"/>
                                     </mask>
@@ -1856,6 +1868,9 @@
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Start Game"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="261" y="432" width="78" height="30"/>
+                                </variation>
                                 <connections>
                                     <action selector="onStartButtonTapped:" destination="ZtS-jC-akE" eventType="touchUpInside" id="LKp-Vd-Pkk"/>
                                 </connections>
@@ -1864,6 +1879,9 @@
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Quit Game"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="263.5" y="489" width="73" height="30"/>
+                                </variation>
                                 <connections>
                                     <action selector="onQuitButtonTapped:" destination="ZtS-jC-akE" eventType="touchUpInside" id="rqh-w1-Lhu"/>
                                     <segue destination="49e-Tb-3d3" kind="show" id="cVq-ge-j5L"/>
@@ -1988,6 +2006,9 @@
                                         <animations/>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="229" width="600" height="127"/>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="Ag6-wj-PyA" id="ai3-QA-DCg"/>
                                     <outlet property="delegate" destination="Ag6-wj-PyA" id="EPp-Ty-Jlz"/>
@@ -2007,7 +2028,8 @@
                                         <exclude reference="FNi-bb-26C"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="237" y="158" width="126" height="22"/>
                                     <mask key="constraints">
                                         <include reference="FNi-bb-26C"/>
                                     </mask>
@@ -2025,11 +2047,17 @@
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="139" y="105" width="451" height="30"/>
+                                </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z07-DC-25m">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Quit Game"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="263.5" y="431" width="73" height="30"/>
+                                </variation>
                                 <connections>
                                     <action selector="exitAction:" destination="Ag6-wj-PyA" eventType="touchUpInside" id="djr-kp-m3F"/>
                                     <segue destination="49e-Tb-3d3" kind="show" id="zHn-eo-D5M"/>
