--- a/Initial.storyboard
+++ b/Initial.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dmI-iP-5tr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dmI-iP-5tr">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--Initial Screen View Controller-->
@@ -15,8 +15,42 @@
                     <view key="view" contentMode="scaleToFill" id="gsT-of-KBR">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashScreen" translatesAutoresizingMaskIntoConstraints="NO" id="pBh-CK-eHc">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fds-jh-9vq" firstAttribute="top" secondItem="pBh-CK-eHc" secondAttribute="bottom" id="1O8-CH-bvs"/>
+                            <constraint firstItem="pBh-CK-eHc" firstAttribute="top" secondItem="gsT-of-KBR" secondAttribute="top" id="2gZ-FG-OFA"/>
+                            <constraint firstItem="pBh-CK-eHc" firstAttribute="leading" secondItem="gsT-of-KBR" secondAttribute="leading" id="O2h-lg-QaN"/>
+                            <constraint firstAttribute="trailing" secondItem="pBh-CK-eHc" secondAttribute="trailing" id="oUv-gE-wRI"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="pBh-CK-eHc"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="2gZ-FG-OFA"/>
+                                <exclude reference="O2h-lg-QaN"/>
+                                <exclude reference="oUv-gE-wRI"/>
+                                <exclude reference="1O8-CH-bvs"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="pBh-CK-eHc"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="2gZ-FG-OFA"/>
+                                <include reference="O2h-lg-QaN"/>
+                                <include reference="oUv-gE-wRI"/>
+                                <include reference="1O8-CH-bvs"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <segue destination="2gU-SB-iyU" kind="show" identifier="MainSegue" id="d0W-3t-3ki"/>
@@ -25,7 +59,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rK0-Bb-VSx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="214" y="345"/>
+            <point key="canvasLocation" x="213" y="345"/>
         </scene>
         <!--Main-->
         <scene sceneID="BLq-6h-NlA">
@@ -44,4 +78,7 @@
             <point key="canvasLocation" x="921.75" y="531"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SplashScreen" width="414" height="736"/>
+    </resources>
 </document>
