--- a/Sixer/Base.lproj/LaunchScreen.storyboard
+++ b/Sixer/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Ldp-7p-mQo">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Ldp-7p-mQo" secondAttribute="bottom" id="WgQ-LX-dqq"/>
+                            <constraint firstItem="Ldp-7p-mQo" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="e1u-mg-AMQ"/>
+                            <constraint firstItem="Ldp-7p-mQo" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="fKq-zQ-kgn"/>
+                            <constraint firstAttribute="trailing" secondItem="Ldp-7p-mQo" secondAttribute="trailing" id="nXW-Fm-V2a"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +36,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="SplashScreen" width="414" height="736"/>
+    </resources>
 </document>
